--- a/site-smoke-osp.yml
+++ b/site-smoke-osp.yml
@@ -19,6 +19,10 @@
     tags:
       - osp.smoke
 
+  - name: debug curl output
+    debug: 
+      msg: webpage
+
   - name: Fail if 'Ansible has done its job' is not in the page content
     fail:
     when: "'Ansible has done its job' not in webpage.results[0].content"
