--- a/roles/base-config/tasks/main.yml
+++ b/roles/base-config/tasks/main.yml
@@ -1,11 +1,11 @@
 ---
 # tasks file for base-config
-- name: enable sudo without tty for some ansible commands
-  replace:
-    path: /etc/sudoers
-    regexp: '^Defaults\s*requiretty'
-    replace: 'Defaults  !requiretty'
-    backup: yes
+# - name: enable sudo without tty for some ansible commands
+#   replace:
+#     path: /etc/sudoers
+#     regexp: '^Defaults\s*requiretty'
+#     replace: 'Defaults  !requiretty'
+#     backup: yes
 
 - name: enable repos
   template:
@@ -15,8 +15,5 @@
 
 - name: install base tools and packages
   yum:
-    name: "{{ item }}" 
+    name: "httpie,python-pip" 
     state: latest
-  with_items:
-    - httpie
-    - python-pip
