--- a/site-smoke-osp.yml
+++ b/site-smoke-osp.yml
@@ -23,7 +23,7 @@
     debug: 
       msg: "{{ webpage }}"
 
-  - name: Fail if 'Ansible has done its job' is not in the page content
+  - name: Fail if we don't get "Ansible has done its job"
     fail:
     when: "'Ansible has done its job' not in webpage.results[0].content"
     tags:
