--- a/site-smoketest-aws.yml
+++ b/site-smoketest-aws.yml
@@ -1,7 +1,8 @@
 - hosts: frontends
   gather_facts: false
+
   tasks:
-  - name: Curl website
+  - name: Open website
     uri:
      url: "http://{{ item }}"
      return_content: yes
@@ -11,7 +12,7 @@
     tags:
       - osp.smoke
 
-  - name: Fail if 'Ansible has done its job' is not in the page content
+  - name: Fail if we don't see 'Ansible has done its job' on the page
     fail:
     when: "'Ansible has done its job' not in webpage.results[0].content"
     tags:
